--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,20 +1,18 @@
 Package: BDM
 Type: Package
 Title: Collection of functions to analyze biodiversity data from Switzerland
-Version: 0.1.8
+Version: 1.0.1
 Author: Tobias Roth
 Maintainer: Tobias Roth <roth@hintermannweber.ch>
 Description: Collection of functions to analyze data from different biodiversity monitoring programs from Switzerland. The package includes functions to calculate baseline data, but also functions for data controlling, functions for data handling and functions to make figures.
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.0
+RoxygenNote: 7.3.1
 Depends: 
-    R (>= 2.10),
-    dplyr,
-    rgdal,
-    sp,
-    rgeos,
+    R (>= 4.0),
+    tidyverse,
+    sf,
     leaflet
 Suggests: 
     knitr,
